# gin

./: README.md  current.txt  old.txt  pyproject.toml
src/gin/: __init__.py  nmnist.py
tests/: test_nmnist.py
